--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/ABOUT.svg" alt="">
+                        <img src="assets/img/about.svg" alt="">
                     </div>
                     
                     <div>
