--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Ridho</span><br> IT Engineering</h1>
 
-                    <a href="#contact" class="button">Contact Us</a>
+                    <a href="#" class="button">Contact Us</a>
                 </div>
 
                 <div class="home__social">
