--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="1.34em" height="1em" viewBox="0 0 32 24"><g fill="none"><path fill="#F7FCFF" fillRule="evenodd" d="M0 0v24h32V0z" clipRule="evenodd"></path><mask id="flagpackId0" width={32} height={24} x={0} y={0} maskUnits="userSpaceOnUse" style="mask-type:luminance"><path fill="#fff" fillRule="evenodd" d="M0 0v24h32V0z" clipRule="evenodd"></path></mask><g mask="url(#flagpackId0)"><path fill="#E31D1C" fillRule="evenodd" d="M0 0v12h32V0z" clipRule="evenodd"></path></g></g></svg>
                     &nbsp;
-                    <a href="#" class="nav__logo">RIDHO FARIS ABQARI.</a>   
+                    <a class="nav__logo">RIDHO FARIS ABQARI.</a>   
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -45,7 +45,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Ridho</span><br> IT Engineering</h1>
 
-                    <a href="#" class="button">Contact Us</a>
+                    <a class="button">Contact Us</a>
                 </div>
 
                 <div class="home__social">
@@ -149,7 +149,7 @@
                     </div>
                     
                     <div>              
-                        <img src="assets/img/bear.jpg" alt="" class="skills__img">
+                        <img src="assets/img/bloom.jpg" alt="" class="skills__img">
                     </div>
                 </div>
             </section>
