--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Ridho</span><br> IT Engineering</h1>
 
-                    <a class="button">Contact Us</a>
+                    <a class="button">Contact Us Below</a>
                 </div>
 
                 <div class="home__social">
                     <a href="https://wa.me/6282153389003" class="home__social-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.9" color="currentColor"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12c0 1.379.28 2.693.784 3.888c.279.66.418.99.436 1.24c.017.25-.057.524-.204 1.073L2 22l3.799-1.016c.549-.147.823-.22 1.073-.204c.25.018.58.157 1.24.436A10 10 0 0 0 12 22"/><path d="M12.882 12C14.052 12 15 13.007 15 14.25s-.948 2.25-2.118 2.25h-2.47c-.666 0-.998 0-1.205-.203S9 15.768 9 15.115V12m3.882 0C14.052 12 15 10.993 15 9.75s-.948-2.25-2.118-2.25h-2.47c-.666 0-.998 0-1.205.203S9 8.232 9 8.885V12m3.882 0H9"/></g></svg></i></a>
                     <a href="https://t.me/@Farisbtc" class="home__social-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" fill-rule="evenodd"><path d="m12.593 23.258l-.011.002l-.071.035l-.02.004l-.014-.004l-.071-.035q-.016-.005-.024.005l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427q-.004-.016-.017-.018m.265-.113l-.013.002l-.185.093l-.01.01l-.003.011l.018.43l.005.012l.008.007l.201.093q.019.005.029-.008l.004-.014l-.034-.614q-.005-.018-.02-.022m-.715.002a.02.02 0 0 0-.027.006l-.006.014l-.034.614q.001.018.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-.43l-.003-.012l-.01-.01z"/><path fill="currentColor" d="M19.777 4.43a1.5 1.5 0 0 1 2.062 1.626l-2.268 13.757c-.22 1.327-1.676 2.088-2.893 1.427c-1.018-.553-2.53-1.405-3.89-2.294c-.68-.445-2.763-1.87-2.507-2.884c.22-.867 3.72-4.125 5.72-6.062c.785-.761.427-1.2-.5-.5c-2.302 1.738-5.998 4.381-7.22 5.125c-1.078.656-1.64.768-2.312.656c-1.226-.204-2.363-.52-3.291-.905c-1.254-.52-1.193-2.244-.001-2.746z"/></g></svg></a>
-                    <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#sent?compose=DmwnWtDvfCkFqfrVmkQHVzxCGJkqDzlXFxsdKvRrVGqhkVGBdsDrnPPVknglZQGPzTqvGgxZqWVV" class="home__social-icon"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4l-8 5l-8-5V6l8 5l8-5z"/></svg></i></a> 
+                    <a href="mailto:ridhofaris860@gmail.com" class="home__social-icon"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4l-8 5l-8-5V6l8 5l8-5z"/></svg></i></a> 
                 </div>
 
                 <div class="home__img">
@@ -78,7 +78,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Ridho</h2>
-                        <p class="about__text">I am a young man, What drives me isn’t just horsepower or hash rates — it’s the process of understanding how things work, and making them better. Whether it’s a piece of code, a video timeline, or a finely tuned machine, I find beauty in precision and progress. I don’t just chase the future — I try to help shape it.</p>
+                        <p class="about__text">I am a 19 year old young man based in East Kalimantan 🇮🇩 nice to meet you 👋🏻 - What drives me isn’t just horsepower or hash rates — it’s the process of understanding how things work, and making them better. Whether it’s a piece of code, a video timeline, or a finely tuned machine, I find beauty in precision and progress. I don’t just chase the future — I try to help shape it.</p>
                     </div>
                 </div>
             </section>
@@ -238,8 +238,8 @@
             <div class="footer__social">
                 <a href="https://www.instagram.com/rridhofariss/?__pwa=1" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
-                <a href="discordapp.com/users/832043832266457098" class="footer__icon"><i class='bx bxl-discord'></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-spotify' ></i></a>
+                <a href="https://discord.gg/6eGsWz2W" class="footer__icon"><i class='bx bxl-discord'></i></a>
+                <a href="https://open.spotify.com/playlist/2m2C58KypZgwpe2Xo3Y7wa?si=8a6c44505df74437" class="footer__icon"><i class='bx bxl-spotify' ></i></a>
             </div>
             <p class="footer__copy">&#169; 2025 Ridho Faris A, All rights reserved</p>
         </footer>
